overlay/dev/replica-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: ${NAMESPACE}
spec:
  replicas: ${REPLICAS_DEV}
