overlay/dev/service-patch.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx   # must match base
# spec:
#   ports:
#   - port: ${PORT}
#     targetPort: ${PORT}
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - port: 8080
    targetPort: 8080
  - port: 80
    targetPort: 80
