overlay/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: ${NAMESPACE}
spec:
  rules:
  - host: ${HOST}
